--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,12 @@
   text-align: center;
 }
 
+#game-container {
+  width: 800px;
+  height: 600px;
+  margin: 0 auto;
+}
+
 .card {
   padding: 2em;
 }
