--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,14 @@
 #root {
-  max-width: 100%;
-  margin: 0;
-  padding: 0;
+  max-width: 1280px;
+  /* margin: 0 auto; */
+  padding: 5px;
   text-align: center;
-  min-height: 100vh;
-  overflow-x: auto;
 }
 
 #game-container {
-  width: 95vw;
-  height: 95vh;
+  width: 800px;
+  height: 600px;
   margin: 0 auto;
-  position: relative;
 }
 
 .card {
